--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@reworkjs/babel-preset-reworkjs",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "The babel preset for applications built using ReworkJS (optional)",
   "main": "lib/index.js",
   "scripts": {
@@ -35,6 +35,7 @@
     "babel-preset-es2016": "^6.22.0",
     "babel-preset-es2017": "^6.22.0",
     "babel-preset-react": "^6.23.0",
+    "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-stage-0": "^6.22.0"
   },
   "devDependencies": {
