--- a/package.json
+++ b/package.json
@@ -24,16 +24,12 @@
   "homepage": "https://github.com/reworkjs/babel-preset-reworkjs#readme",
   "dependencies": {
     "babel-plugin-lodash": "^3.2.11",
-    "babel-plugin-syntax-async-functions": "^6.13.0",
-    "babel-plugin-transform-async-to-generator": "^6.22.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-flow-strip-types": "^6.22.0",
     "babel-plugin-transform-react-constant-elements": "^6.23.0",
     "babel-plugin-transform-react-inline-elements": "^6.22.0",
     "babel-plugin-transform-react-remove-prop-types": "^0.3.2",
-    "babel-preset-es2015": "^6.24.0",
-    "babel-preset-es2016": "^6.22.0",
-    "babel-preset-es2017": "^6.22.0",
+    "babel-preset-env": "^1.3.2",
     "babel-preset-react": "^6.23.0",
     "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-stage-0": "^6.22.0"
@@ -41,7 +37,7 @@
   "devDependencies": {
     "@foobarhq/eslint-config": "^1.0.1",
     "babel-cli": "^6.24.0",
-    "babel-preset-es2015": "^6.24.0",
-    "eslint": "^3.18.0"
+    "babel-preset-env": "^1.3.2",
+    "eslint": "^3.19.0"
   }
 }
